--- a/en/t/trick out.774631.wikitext
+++ b/en/t/trick out.774631.wikitext
@@ -6,6 +6,8 @@
 # {{informal|transitive|of a person or thing}} To [[dress]] or [[decorate]] in an especially [[fancy]], [[elaborate]], or [[excessive]] manner. 
 #* '''1869''', [[w:Mark Twain|Mark Twain]], ''The Innocents Abroad'', ch. 50:
 #*: We went down a flight of fifteen steps below the ground level, and stood in a small chapel '''tricked out''' with tapestry hangings, silver lamps, and oil paintings.
+#*'''1883''', Stevenson, ''[[s:Treasure Island (1883)|Treasure Island]]''
+#*:He was '''tricked out''' in his best: an immense blue coat, thick with brass buttons, hung as low as to his knees, and a fine laced hat was set on the back of his head.
 #* '''1913''', [[w:John Galsworthy|John Galsworthy]], ''The Dark Flower'', ch. 6:
 #*: That stare was as if he saw her—a doll '''tricked out''' in garments labelled soul, spirit, rights, responsibilities, dignity, freedom—all so many words.
 # {{informal|transitive|of a [[motor vehicle]], etc.}} To [[mod]] or [[customize]] an object, typically for the purposes of [[personalization]] and enhancing [[performance]] capabilities such as the ability to perform [[stunt]]s.
