--- a/en/c/CD-RW.26222.wikitext
+++ b/en/c/CD-RW.26222.wikitext
@@ -3,10 +3,10 @@
 ===Alternative forms===
 * [[CD/RW]]
 
-==={{initialism}}===
+===Noun===
 {{en-noun|head=[[CD]]-[[RW]]}}
 
-# [[compact disk|Compact Disk]] - Read [[writable|Writable]].  A form of digital media that is based on the use of a laser to read from a plastic disc.  It can be written to multiple times.
+# {{initialism of|[[compact disk|Compact Disk]] - Read [[writable|Writable]]}} A form of digital media that is based on the use of a laser to read from a plastic disc. It can be written to multiple times.
 
 ====Synonyms====
 * {{sense|Compact Disk - Read Writable}} [[CD-E]] {{qualifier|dated}}
@@ -18,7 +18,7 @@
 {{trans-top|Compact Disk - Read Writable}}
 * Jèrriais: {{tø|roa-jer|disque èrenr'gistrabl'ye|m}}
 {{trans-mid}}
-* {{ttbc|Serbian}}: [[piši-briši cede]]
+* {{ttbc|sh}}: [[piši-briši cede]]
 {{trans-bottom}}
 
 [[et:CD-RW]]
