--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -143,7 +143,7 @@ The verb comes from the supposed cunningness of the weasel.
 # {{context|transitive|or|reflexive}} To gain something for oneself by clever or devious means.
 #* {{quote-book|title=Alien Deception| books.google.com/books?isbn=1896944345| author=Tony Ruggiero| year=2006| passage=He's '''weaseled''' himself into a position where he can influence the outcome of this election.}}
 #* {{quote-book|title=Uncovered: Revealing the Secrets of a Sexy Marriage| page=147| books.google.com/books?isbn=1441212175| author=Susie Davis| year=2010| passage=Within just a couple of days, she [a dog] had '''weaseled''' her way into our hearts.}}
-# {{intransitive}} To engage in clever or devious behavior}}
+# {{intransitive}} To engage in clever or devious behavior.
 #* {{quote-book|title=Sex: A Man's Guide| page=151| books.google.com/books?isbn=0875962998| author=Stefan Bechtel, Larry Stains| year=1996| passage=Authority figures have a history of '''weaseling''' on this topic.}}
 
 ====Usage notes====
