--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -261,21 +261,33 @@ From {{etyl|enm}} {{term|at|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, 
 
 ==Faroese==
 
-===Preposition===
+===Etymology 1===
+From {{etyl|non|fo}} {{term|at|lang=non}}.
+
+====Preposition====
 '''at''' (+ {{dative}})
 
 # [[at]], [[towards]], [[to]]
 
-===Conjunction===
+===Etymology 2===
+From {{etyl|non|fo}} {{term|at||that|lang=non}}, from {{etyl|gem-pro|fo}} {{recons|þat||that|lang=gem-pro}}. Cognate with {{etyl|enm|-}} {{term|at||that|pos=conjunction and relative pronoun|lang=enm}}, {{etyl|sco|-}} {{term|at||that|pos=conjunction and relative pronoun|lang=sco}}. More at {{l/en|that}}.
+
+====Conjunction====
 '''at'''
 
 # [[that]]
 
-===Particle===
-'''at'''
+===Etymology 3===
+From {{etyl|non|fo}} {{term|at||at, to|lang=non}}, from {{etyl|gem-pro|fo}} {{recons|at||at, to|lang=gem-pro}}. More at {{l/en|at}}.
+
+====Particle====
+'''að''' {{qualifier|infinitive particle}}
 
 # [[to]] (A particle used to mark the following verb as an [[infinitive]].)
 ::: '''''At''' lyfta.'' (To lift)
+
+=====Usage notes=====
+* The infinitive particle '''að''' is the only infinitive marker in Icelandic.
 
 [[Category:Faroese conjunctions]]
 [[Category:Faroese particles]]
