--- a/en/m/mortarboard.720191.wikitext
+++ b/en/m/mortarboard.720191.wikitext
@@ -5,7 +5,7 @@
 [[Image:LinusPaulingGraduation1922.jpg|thumb]]
 
 # A square [[board]], with a [[handle]], on which [[mortar]] or [[plaster]] is carried: a [[hawk#Etymology 2|hawk]].
-# An [[academic]] [[cap]] that has a flat square top with a [[tassel]]
+# An [[academic]] [[cap]] that has a flat square top with a [[tassel]].
 
 ====Synonyms====
 * {{sense|tool}} [[hawk#Etymology 2|hawk]]
