--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -25,6 +25,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * [[Nintendinitis]]
 * [[Nintendocore]]
 * [[Nintendo thumb]]
+* [[get a nintendo]]
 
 ====Translations====
 {{trans-top|Nintendo Entertainment System, or other video game system made by Nintendo}}
