--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -94,6 +94,7 @@ French from {{etyl|la}} ''[[#Latin|maximum]]''.
 {{trans-bottom}}
 
 ===Derived terms===
+* [[antimaximum]]
 * [[global maximum]]
 * [[local maximum]]
 * [[maximal]]
