--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -82,6 +82,7 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm}} {{term|seisen|lang=enm}}, {{te
 * Finnish: {{t+|fi|tarttua}} {{t+|fi|tilaisuus|alt=tilaisuuteen}}
 * French: {{t+|fr|saisir}}
 {{trans-mid}}
+* Latin: {{t|la|carpo}}
 * Norwegian: {{t-|no|gripe}}
 * Portuguese: {{t+|pt|aproveitar}}
 * Spanish: {{t+|es|tomar}}, {{t+|es|aprovechar|alt=aprovercharse de}}
