--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -4,7 +4,7 @@
 [[File:John William Waterhouse - Magic Circle.JPG|thumb|A woman drawing a circle with a staff]]
 
 ===Etymology===
-{{etyl|ang}} {{term|stæf|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|stabaz|lang=gem-pro}}. Cognate with Dutch {{term|staf|lang=nl}}, German {{term|Stab|lang=de}}, Swedish {{term|stav|lang=sv}}. Sense of "group of military officers that assists a commander", attested from 1702, is influenced from German {{term|Stab|lang=de}}.
+{{etyl|ang}} {{ROR 404{{of "group of military officers that assists a commander", attested from 1702, is influenced from German {{term|Stab|lang=de}}.
 
 ===Pronunciation===
 * {{a|RP}} {{enPR|stäf}}, {{IPA|/stɑːf/}}, {{X-SAMPA|stA:f}}
@@ -29,8 +29,7 @@
 |work=Guardian
 |url=http://www.guardian.co.uk/society/2011/dec/16/hospital-staff-dementia-patients
 |page=
-|passage=Most '''staff''' do not have the skills to cope with such challenging patients, who too often receive "impersonal" care and suffer from boredom, the first National Audit of Dementia found. It says hospitals should introduce "dementia champions.''}}
-# {{uncountable}} A mixture of [[plaster]] and [[fibre]] used as a temporary exterior wall covering (see [[w:Staff (building material)|Wikipedia article]])
+|passage=Most '''staff''' do not have the skills to cope with such challenging patients, who too often receive "impersonal" care and ERROR 404
 
 ====Synonyms====
 * {{sense|music}} [[stave]]
