--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -13,8 +13,9 @@
 * Bulgarian: {{t-|bg|металург|m|tr=metalúrg}}
 * Czech: {{t-|cs|metalurg|m}}
 * Finnish: {{t+|fi|metallurgi}}
-* German: {{t-|de|Metallurg|m}}, {{t-|de|Metallurge|m}}, {{t-|de|Metallurgin|f}}
+* French: {{t|fr|métallurgiste|m|f}}
 {{trans-mid}}
+* German: {{t-|de|Metallurg|m}}, {{t-|de|Metallurge|m}}, {{t-|de|Metallurgin|f}}
 * Russian: {{t+|ru|металлург|m|tr=metallúrg}}
 * Spanish: {{t-|es|metalúrgico|m|f}}, {{t-|es|metalurgista|m}}
 * Ukrainian: {{t-|uk|металург|m|tr=metallúrh|sc=Cyrl}}
