--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -21,9 +21,10 @@ Ultimately from {{term|dudde||ragged clothing or cloth}}, of uncertain origin be
 {{trans-top|broken or nonfunctional device that does not perform its intended function}}
 * Finnish: {{t+|fi|susi}}, {{t+|fi|suutari}}
 * French: {{t-|fr|fausse alerte}}
-{{trans-mid}}
 * German: {{t+|de|Blindgänger}} {{m}}
+{{trans-mid}}
 * Russian: {{t-|ru|невзрывающийся|tr=nevzryvájuščijsja}}, {{t+|ru|неисправный|tr=neisprávnyj}}
+* Swedish: {{t|sv|blindgångare|c}}
 {{trans-bottom}}
 
 {{trans-see|obsolete: clothes|duds}}
