--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -20,6 +20,15 @@ North African.
 
 # {{context|in parts of French North Africa}} [[hinterland|Hinterland]], [[field]].
 
+===Etymology 3===
+Created in [[Multicultural London English]], of [[Jamaican]] origin. Has since spread around [[England]].
+====Noun====
+{{en-noun}}
+
+#{{UK|MLE|slang}} Informal address to a male.
+
+====See also====
+*[[blud]]
 ----
 
 ==French==
