--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -95,6 +95,20 @@
 
 ----
 
+==French==
+===Etymology===
+From {{suffix|fer|et|lang=fr}}.
+
+===Pronunciation===
+*{{IPA|/fɛ.ʁɛ/|lang=fr}}
+
+===Noun===
+{{fr-noun|m}}
+
+# (metal) [[tag]]; [[aglet]], [[aiguillette]]
+
+----
+
 ==Latin==
 
 ===Verb===
