--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -4,7 +4,7 @@
 [[Image:Loutre des pyrenees baronnies 2004.jpg|thumb|otter (1)]]
 
 ===Etymology 1===
-From {{etyl|ang}} {{term|oter|lang=ang}}. Cognate with Old High German {{term|ottar}}, Old Slavic {{Glag|[[ⰲⱏⰺⰴⱃⰰ]]}}, and Ancient Greek {{term|ὕδρα|tr=hydra||water snake|lang=grc}}. More etymology under English [[water]].
+From {{etyl|ang}} {{term|oter|lang=ang}}, from {{etyl|gem-pro|en}} {{recons|utraz|lang=gem-pro}}, from {{etyl|ine-pro|en}} {{recons|udrós||water-animal, otter|lang=ine-pro}}, from {{recons|wed-||water|lang=ine-pro}}. Cognate with Old High German {{term|ottar|lang=goh}}, Old Church Slavonic {{term|ⰲⱏⰺⰴⱃⰰ|tr=vydra|lang=cu|sc=Glag}}, and Ancient Greek {{term|ὕδρα|tr=hydra||water snake|lang=grc}}. More etymology under English [[water]].
 
 ====Pronunciation====
 * {{a|RP}} {{IPA|/ˈɒt.ə/}}
@@ -137,6 +137,9 @@ Corruption.
 ----
 
 ==Dutch==
+
+===Etymology===
+From {{etyl|dum|nl}} {{term|otter|lang=dum}}, from {{etyl|odt|nl}} {{term|ottar|lang=odt}}, from {{etyl|gem-pro|nl}} {{recons|utraz|lang=gem-pro}}, from {{etyl|ine-pro|nl}} {{recons|udrós||water-animal, otter|lang=ine-pro}}, from {{recons|wed-||water|lang=ine-pro}}.
 
 ===Pronunciation===
 * {{audio|Nl-otter.ogg|Audio}}
