--- a/en/h/hairnet.34110.wikitext
+++ b/en/h/hairnet.34110.wikitext
@@ -20,7 +20,7 @@
 ====Translations====
 {{trans-top|net designed to keep hair up}}
 * Chinese: 
-*: Mandarin: {{t|cmn|髮網|sc=Hani}}, {{t|cmn|发网|tr=fàwǎng|sc=Hani}}
+*: Mandarin: {{t|cmn|髮網|sc=Hani}}, {{t|cmn|发网|tr=fàwǎng|sc=Hani}}, {{t|cmn|頭套|sc=Hani}}, {{t|cmn|头套|tr=tóutào|sc=Hani}}
 * Dutch: {{t+|nl|haarnetje|n}}
 * Finnish: {{t-|fi|hiusverkko}}
 * French: {{t+|fr|filet à cheveux|m}}
