--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -105,7 +105,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 
 =====Translations=====
 {{trans-top|to produce an air current}} <!--1-->
-* Arabic: {{t-|ar|نفخ|tr=nafakha}}
+* Arabic: {{t-|ar|نفخ|tr=nafaxa}}
 * Armenian: {{t-|hy|փչել|tr=p'čel}}
 * Aromanian: {{t-|rup|suflu}}
 * Belarusian: {{t|be|дзьмуць|tr=dzʹmucʹ|sc=Cyrl}}, {{t|be|дуць|tr=ducʹ|sc=Cyrl}}
@@ -113,7 +113,7 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Burmese: {{t+|my|မှုတ်|tr=hmok|sc=Mymr}}
 * Catalan: {{t+|ca|bufar}}
 * Chinese:
-*: {{ttbc|cmn}}: {{t-|cmn|吹|tr=chuī|sc=Hani}}, {{zh-tsp|颳|刮|guā}}
+*: Mandarin: {{t+|cmn|吹|tr=chuī|sc=Hani}}, {{t|cmn|颳|sc=Hani}}, {{t+|cmn|刮|tr=guā|sc=Hani}}
 * Czech: {{t+|cs|vát}}, {{t-|cs|vanout}}, {{t+|cs|foukat}}
 * Danish: {{t+|da|blæse}}, {{t-|da|puste}}
 * Dutch: {{t+|nl|blazen}}, {{t+|nl|waaien}}
@@ -127,11 +127,11 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Hungarian: {{t+|hu|fúj}}
 * Irish: {{t-|ga|séid}}
 * Italian: {{t+|it|soffiare}}
-* Japanese: [[吹く]] ([[ふく]], fuku), {{t|ja|吹く|tr=ふく, fuku|sc=Jpan}}
-* Korean: [[불다]] (bulda), {{t|ko|불다|tr=bulda|sc=Kore}}
+* Japanese: {{t|ja|吹く|tr=[[ふく]], fuku|sc=Jpan}}
+* Korean: {{t|ko|불다|tr=bulda|sc=Kore}}
 * Kurdish:
-*: Sorani: {{ku-Arab|[[فو]]}}
-* Kyrgyz: {{t+|ky|сокку}}, {{t+|ky|шамал соккусу}}, {{t+|ky|айдоо}}, {{t-|ky|айдап кийирүү}}, {{t-|ky|жел чыгаруу}},{{t+|ky|желаргы сокку}}, {{t+|ky|шамалдуу жел}}, {{t+|ky|желдөө}}, {{t+|ky|шамал үйлөөсү}}, {{t-|ky|үйлөө}}, {{t+|ky|желбиретүү}}, {{t+|ky|желпилдетүү}}, {{t+|ky|көбүү}}, {{t+|ky|шишүү}}, {{t+|ky|шишип кетүү}}, {{t+|ky|күшүлдөө}}, {{t+|ky|бышылдоо}}
+*: Sorani: {{t|ckb|فو|sc=ku-Arab}}
+* Kyrgyz: {{t+|ky|сокку}}, {{t+|ky|шамал соккусу}}, {{t+|ky|айдоо}}, {{t-|ky|айдап кийирүү}}, {{t-|ky|жел чыгаруу}}, {{t+|ky|желаргы сокку}}, {{t+|ky|шамалдуу жел}}, {{t+|ky|желдөө}}, {{t+|ky|шамал үйлөөсү}}, {{t-|ky|үйлөө}}, {{t+|ky|желбиретүү}}, {{t+|ky|желпилдетүү}}, {{t+|ky|көбүү}}, {{t+|ky|шишүү}}, {{t+|ky|шишип кетүү}}, {{t+|ky|күшүлдөө}}, {{t+|ky|бышылдоо}}
 {{trans-mid}}
 * Latgalian: {{tø|ltg|pyust}}
 * Latin: {{t-|la|flo}}, {{t-|la|sufflo}}
@@ -145,34 +145,34 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 * Rapa Nui: {{tø|rap|puhi}}
 * Romanian: {{t-|ro|sufla}}
 * Romansch: {{t-|rm|sufflar}}
-* Russian: {{t+|ru|дуть|tr=dut'}} {{impf}}, {{t+|ru|дунуть|tr=dúnut'}} {{pf.}}; {{t+|ru|сморкаться|tr=smorkát's'a}} {{impf}}, {{t-|ru|сморкнуться|tr=smorknút's'a}} {{pf.}} ''blow the nose''
+* Russian: {{t+|ru|дуть|tr=dutʹ}} {{impf}}, {{t+|ru|дунуть|tr=dúnutʹ}} {{pf.}}, {{t+|ru|сморкаться|tr=smorkátʹsja}} {{impf}}, {{t-|ru|сморкнуться|tr=smorknútʹsja}} {{pf.}} ''blow the nose''
 * Scottish Gaelic: {{t-|gd|sèid}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|дувати}}
 *: Roman: {{t|sh|duvati}}
-* Sicilian: [[ciusciari]]
+* Sicilian: {{t|scn|ciusciari}}
 * Slovak: {{t|sk|duť}}, {{t|sk|fúkať}}
 * Slovene: {{t+|sl|pihati}}
 * Spanish: {{t+|es|soplar}}
 * Swedish: {{t+|sv|blåsa}}
 * Turkish: {{t+|tr|üflemek}}
 * Ukrainian: {{t|uk|дути|tr=dúty|sc=Cyrl}}
-* Vietnamese: [[thổi]]; [[phù]], [[phù phù]] (to blow on food)
+* Vietnamese: {{t|vi|thổi}}, {{t|vi|phù}}, {{qualifier|to blow on food}} {{t|vi|phù phù}}
 {{trans-bottom}}
 
 {{trans-top|to propel by an air current}} <!--2-->
 * Armenian: {{t-|hy|փչել|tr=p'čel}}
 * Chinese:
-*: Mandarin: {{zh-tsp|刮走|刮走|guā zǒu}}
+*: Mandarin: {{t|cmn|刮走|tr=guāzǒu|sc=Hani}}
 * Danish: {{t+|da|blæse}}, {{t-|da|puste}}
 * Dutch: {{t+|nl|blazen}}
 * Finnish: {{t+|fi|puhaltaa}}
-* German: [[blasen]], [[wegblasen]], [[fortblasen]], [[hinfortblasen]], [[pusten]], [[wegpusten]]
+* German: {{t|de|blasen}}, {{t|de|wegblasen}}, {{t|de|fortblasen}}, {{t|de|hinfortblasen}}, {{t|de|pusten}}, {{t|de|wegpusten}}
 {{trans-mid}}
 * Irish: {{t-|ga|séid}}
-* Korean: [[불다]] (bulda)
-* Polish: [[zdmuchnąć]]
-* Russian: {{t+|ru|сдувать|tr=sduvát'}} {{impf}}, {{t+|ru|сдуть|tr=sdut'}} {{pf.}}
+* Korean: {{t|ko|불다|tr=bulda|sc=Kore}}
+* Polish: {{t|pl|zdmuchnąć}}
+* Russian: {{t+|ru|сдувать|tr=sduvátʹ}} {{impf}}, {{t+|ru|сдуть|tr=sdutʹ}} {{pf.}}
 * Spanish: {{t+|es|soplar}}
 * Scottish Gaelic: {{t-|gd|sèid}}
 * Vietnamese: {{t+|vi|thở}}, {{t+|vi|thổi}}
@@ -180,13 +180,13 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 
 {{trans-top|to be propelled by an air current}} <!--3-->
 * Chinese:
-*: Mandarin: {{zh-tsp|隨風飄動|随风飘动|suí fēng piāo dòng}}
+*: Mandarin: {{t|cmn|隨風飄動|tr=guā|sc=Hani}}, {{t|cmn|随风飘动|tr=suífēng piāodòng|sc=Hani}}
 * Danish: {{t+|da|blæse}}
 * Finnish: {{t+|fi|lentää}}, {{t-|fi|lennähtää}}, {{t-|fi|lennellä}}
 * German: {{t+|de|wehen}}
 {{trans-mid}}
 * Irish: {{t-|ga|séid}}
-* Korean: [[불리다]] (bullida)
+* Korean: {{t|ko|불리다|tr=bullida|sc=Kore}}
 * Macedonian: {{t-|mk|се вее|tr=se vée}}
 * Romanian: {{t-|ro|fi purtat}}
 * Vietnamese: {{t+|vi|bay}}
@@ -194,16 +194,16 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 
 {{trans-top|to create or shape by blowing}} <!--4-->
 * Chinese:
-*: Mandarin: {{zh-tsp|吹氣|吹气|chuī qì}}
+*: Mandarin: {{t|cmn|吹氣|tr=guā|sc=Hani}}, {{t|cmn|吹气|tr=chuīqì|sc=Hani}}
 * Dutch: {{t+|nl|blazen}}
 * Finnish: {{t+|fi|puhaltaa}}
 * Hebrew: {{t-|he|ניפח|tr=nipéakh}}
 * Irish: {{t-|ga|séid}}
-* Korean: [[불다]] (bulda)
+* Korean: {{t|ko|불다|tr=bulda|sc=Kore}}
 {{trans-mid}}
 * Macedonian: {{t-|mk|дува|tr=dúva}}
 * Romanian: {{t-|ro|umfla}}
-* Russian: {{t-|ru|выдувать|tr=vyduvát'}} {{impf}}, {{t+|ru|выдуть|tr=výdut'}} {{pf.}}
+* Russian: {{t-|ru|выдувать|tr=vyduvátʹ}} {{impf}}, {{t+|ru|выдуть|tr=výdutʹ}} {{pf.}}
 * Spanish: {{t+|es|soplar}}
 * Swahili: {{t+|sw|panchi}}
 * Vietnamese: {{t+|vi|thổi}}
@@ -226,32 +226,32 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 
 {{trans-top|(of a cetacean) exhale visibly through the spout the seawater}} <!--7-->
 * Chinese:
-*: Mandarin: {{zh-tsp|喘氣|喘气|chuǎn qì}}
+*: Mandarin: {{t|cmn|喘氣|tr=guā|sc=Hani}}, {{t|cmn|喘气|tr=chuǎnqì|sc=Hani}}
 * Dutch: {{t+|nl|spuiten}}
 * Finnish: {{t-|fi|suihkuttaa}}, {{t+|fi|puhaltaa}}
 {{trans-mid}}
-* Korean: [[뿜다]] (ppumda)
+* Korean: {{t|ko|뿜다|tr=ppumda|sc=Kore}}
 * Scottish Gaelic: {{t-|gd|sèid}}
 * Swahili: {{t+|sw|panchi}}
-* Vietnamese: [[phun]] [[nước]]
+* Vietnamese: {{t|vi|phun nước}}
 {{trans-bottom}}
 
 {{trans-top|to explode}} <!--8-->
 * Armenian: {{t-|hy|պայթել|tr=payt'el}}
 * Bulgarian: {{t-|bg|взривявам се}}, {{t+|bg|експлодирам}}
 * Chinese:
-*: Mandarin: {{zh-tsp|爆炸|爆炸|bào zhà}}
+*: Mandarin: {{t|cmn|爆炸|tr=bàozhà|sc=Hani}}
 * Dutch: {{t+|nl|springen}}, {{t+|nl|ontploffen}}
 * Finnish: {{t+|fi|räjähtää}}
 * French: {{t+|fr|exploser}}
 * German: {{t-|de|hochgehen}}, [[in]] [[die]] [[Luft]] {{t+|de|gehen}}, {{t+|de|explodieren}}
 * Hebrew: {{t-|he|התפוצץ|tr=hitpotzétz}}
 {{trans-mid}}
-* Japanese: [[爆発]]する ([[ばくはつ]]する, bakuhatsu-suru)
-* Korean: [[터지다]] (teojida)
+* Japanese: {{t|ja|爆発|tr=[[ばくはつ]]する, bakuhatsusuru|alt=爆発する|sc=Jpan}}
+* Korean: {{t|ko|터지다|tr=teojida|sc=Kore}}
 * Macedonian: {{t-|mk|се распрснува|tr=se rasp'rsnuva}}
 * Portuguese: {{t+|pt|explodir}}
-* Russian: {{t+|ru|взрываться|tr=vzryvát's'a}} {{impf}}, {{t+|ru|взорваться|tr=vzorvát's'a}} {{pf.}}, {{t-|ru|взлетать на воздух|tr=vzletát' na vózduz}} {{impf}}, {{t+|ru|взлететь на воздух|tr=vzlet'ét' na vózdux}} {{pf.}}
+* Russian: {{t+|ru|взрываться|tr=vzryvátʹsja}} {{impf}}, {{t+|ru|взорваться|tr=vzorvátʹsja}} {{pf.}}, {{t-|ru|взлетать на воздух|tr=vzletátʹ na vózduz}} {{impf}}, {{t+|ru|взлететь на воздух|tr=vzletétʹ na vózdux}} {{pf.}}
 * Swahili: {{t+|sw|panchi}}
 * Vietnamese: {{t+|vi|nổ}}
 {{trans-bottom}}
@@ -263,57 +263,57 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 {{trans-bottom}}
 
 {{trans-top|to cause sudden destruction}} <!--10-->
-* Finnish: {{t+|fi|rikkoa}}, {{t+|fi|särkeä}}; {{t+|fi|polttaa}} (''by electric current'')
+* Finnish: {{t+|fi|rikkoa}}, {{t+|fi|särkeä}}, {{t+|fi|polttaa}} (''by electric current'')
 {{trans-mid}}
 * Spanish: {{t-|es|reventar}}
 {{trans-bottom}}
 
 {{trans-top|to fail suddenly destructively}} <!--11-->
-* Finnish: {{t+|fi|rikkoutua}}, {{t+|fi|särkyä}}; {{t+|fi|palaa}} (''by electric current'')
+* Finnish: {{t+|fi|rikkoutua}}, {{t+|fi|särkyä}}, {{t+|fi|palaa}} (''by electric current'')
 {{trans-mid}}
 * Spanish: {{t+|es|arruinar}}, {{t+|es|cagar}}
 {{trans-bottom}}
 
 {{trans-top|be very undesirable}} <!--12-->
 * Chinese:
-*: Mandarin: {{zh-tsp|搞砸|搞砸|gǎo zá}}
-* Finnish: [[olla]] [[syvä|syvältä]]
+*: Mandarin: {{t|cmn|搞砸|tr=gǎozá|sc=Hani}}
+* Finnish: {{t-SOP|fi|[[olla]] [[syvä|syvältä]]}}
 * French: [[être]] {{t+|fr|nul|m}}, [[faire]] {{t+|fr|chier}}
 {{trans-mid}}
-* Korean: [[제기랄]] (jegiral) (''interjection'')
+* Korean: {{qualifier|interjection}} {{t|ko|제기랄|tr=jegiral|sc=Kore}}
 * Swahili: {{t+|sw|panchi}}
 * Vietnamese: {{t+|vi|tẽn tò}}, {{t+|vi|tẽn}}, {{t+|vi|thẹn thò}}, {{t+|vi|thẹn}}
 {{trans-bottom}}
 
 {{trans-top|to squander}} <!--13-->
 * Chinese:
-*: Mandarin: {{zh-tsp|浪費|浪费|làng fèi}}
+*: Mandarin: {{t|cmn|浪費|sc=Hani}}, {{t|cmn|浪费|tr=làngfèi|sc=Hani}}
 * Dutch: {{t-|nl|doorjagen}}
 * Finnish: {{t+|fi|tuhlata}}, {{t+|fi|törsätä}}
 * French: {{t+|fr|claquer}}, {{t+|fr|flamber}}
 {{trans-mid}}
-* Korean: [[날리다]] (nallida)
-* Russian: {{t+|ru|продувать|tr=produvát'}} {{impf}}, {{t+|ru|продуть|tr=prodút'}} {{pf.}}
+* Korean: {{t|ko|날리다|tr=nallida|sc=Kore}}
+* Russian: {{t+|ru|продувать|tr=produvátʹ}} {{impf}}, {{t+|ru|продуть|tr=prodútʹ}} {{pf.}}
 * Spanish: {{t+|es|cagar}}
 * Swahili: {{t+|sw|panchi}}
-* Vietnamese: [[xài phí]], [[phung phí]]
+* Vietnamese: {{t|vi|xài phí}}, {{t|vi|phung phí}}
 {{trans-bottom}}
 
 {{trans-top|to fellate}} <!--14-->
 * Armenian: {{t-|hy|ծծել|tr=ççel}}
 * Bulgarian: {{t+|bg|духам}}
-* Catalan: [[llepar]]
+* Catalan: {{t|ca|llepar}}
 * Dutch: {{t+|nl|pijpen}}
 * Finnish: {{t-|fi|ottaa suihin}}
 * French: {{t+|fr|sucer}}, [[tailler]] une {{t+|fr|pipe}} (''to hew, or to grave, a smoking pipe'')
 * German: {{t+|de|blasen}}
-* Korean: [[아양떨다]] (ayang-tteolda)
+* Korean: {{t|ko|아양떨다|tr=ayang-tteolda|sc=Kore}}
 * Macedonian: {{t-|mk|пуши|tr=púši}}, {{t-|mk|дудла|tr=dúdla}}
 {{trans-mid}}
 * Persian: {{t-|fa|ساک زدن|tr=sâk zadan|sc=fa-Arab}}
-* Polish: [[robić loda]], [[lizać pałę]], [[obciągać loda]], [[obciągać fiuta]], [[obciągać chuja]]
-* Russian: {{t+|ru|сосать|tr=sosát’}} {{impf}}, {{t+|ru|отсосать|tr=otsosát’}} {{pf.}}
-* Serbian:
+* Polish: {{t|pl|robić loda}}, {{t|pl|lizać pałę}}, {{t|pl|obciągać loda}}, {{t|pl|obciągać fiuta}}, {{t|pl|obciągać chuja}}
+* Russian: {{t+|ru|сосать|tr=sosátʹ}} {{impf}}, {{t+|ru|отсосать|tr=otsosátʹ}} {{pf.}}
+* Serbo-Croatian:
 *:* Cyrillic: [[пушити]]
 *:* Roman: [[pušiti]]
 * Spanish: {{t+|es|chupar}}, {{t+|es|mamar}}
@@ -323,22 +323,22 @@ From {{etyl|enm}} {{term|blowen|lang=enm}}, from {{etyl|ang}} {{term|blawan|blā
 
 {{trans-top|to leave}} <!--15-->
 * Chinese:
-*: Mandarin: {{zh-tsp|離開|离开|lí kāi}}
+*: Mandarin: {{zh-tsp|離開|离开|líkāi}}
 * Finnish: {{t+|fi|häipyä}}
 * French: {{t+|fr|se casser}}, se {{t+|fr|tirer}}, [[mettre]] les {{t+|fr|voiles}}
 {{trans-mid}}
-* Korean: [[그만두다]] (geuman-duda)
+* Korean: {{t|ko|그만두다|tr=geuman-duda|sc=Kore}}
 * Spanish: {{t+|es|ir}}, {{t+|es|largar}}
 * Swahili: {{t+|sw|panchi}}
-* Vietnamese: [[bỏ đi]], [[chuồn]]
+* Vietnamese: {{t|vi|bỏ đi}}, {{t|vi|chuồn}}
 {{trans-bottom}}
 
 {{checktrans-top}}
 ''intransitive meanings''
 * {{ttbc|nl}}: {{t+|nl|beffen}} {{qualifier|this is said to mean 'to fellate', but check it}}
-* {{ttbc|eo}}: [[blovi]]
-* {{ttbc|id}}: [[tiup|meniup]], [[ledak|meledakkan]]
-* {{ttbc|te}}: [[ఊదు]] (oodu), [[కొట్టుకొనిపోవు]] (koTTukonipOvu), [[వీచు]] (veecu)
+* {{ttbc|eo}}: {{t|eo|blovi}}
+* {{ttbc|id}}: {{t|id|meniup}}, {{t|id|meledakkan}} <!-- link as t-SOP if non-idiomatic; put marked word in |alt=; see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
+* {{ttbc|te}}: {{t|te|ఊదు|tr=oodu|sc=Telu}}, {{t|te|కొట్టుకొనిపోవు|tr=koTTukonipOvu|sc=Telu}}, {{t|te|వీచు|tr=veecu|sc=Telu}}
 {{trans-bottom}}
 
 ====Noun====
