--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -14,6 +14,9 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 {{en-adv|-}}
 
 # {{context|temporal location|lang=en}} At that [[time]].
+#*{{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
+|title={{w|The Celebrity}}|chapter=1
+|passage=In the old days, to my commonplace and unobserving mind, he gave no evidences of genius whatsoever. He never read me any of his manuscripts,&nbsp;[&hellip;], and therefore my lack of detection of his promise may in some degree be pardoned. But he had '''then''' none of the oddities and mannerisms which I hold to be inseparable from genius, and which struck my attention in after days when I came in contact with the Celebrity.}}
 #: {{usex|He was happy '''then'''.}}
 # {{context|temporal location|lang=en}} Soon afterward.
 #*{{quote-book|year=1913|author={{w|Joseph C. Lincoln}}
@@ -30,8 +33,8 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 # {{context|sequence|lang=en}} [[at the same time|At the same time]]; [[on the other hand]].
 #: {{usex|That’s a nice shirt, but '''then''', so is the other one.}}
 # {{context|obsolete|lang=en}} At the time that; [[when]].
-#* '''1485''', Sir {{w|Sir Thomas Malory}}, ''Le Morte Darthur'', Book I.23, reprinted 1817, Sir Thomas Malory, {{w|William Caxton}}, ''Morte Darthur: The Byrth, Lyf, and Actes of Kyng Arthur'', Volume 1, [http://books.google.com.au/books?id=eaUKAAAAYAAJ&pg=PA37&dq=%22the+knyght+sawe+hym+lye+soo+on+the+ground%22&hl=en&sa=X&ei=rAgPT5-YI8O5iAeAobDgCQ&redir_esc=y#v=onepage&q=%22the%20knyght%20sawe%20hym%20lye%20soo%20on%20the%20ground%22&f=false page 37]:
-#*: '''Than''' the knyght sawe hym lye soo on the ground, he alyght and was passynge heuy, for he wende he had slayne hym [...].
+#* '''1485''', Sir {{w|Thomas Malory}}, ''{{w|Le Morte d'Arthur}}'', Book I.23, reprinted 1817, Sir Thomas Malory, {{w|William Caxton}}, ''Morte Darthur: The Byrth, Lyf, and Actes of Kyng Arthur'', Volume 1, [http://books.google.com.au/books?id=eaUKAAAAYAAJ&pg=PA37&dq=%22the+knyght+sawe+hym+lye+soo+on+the+ground%22&hl=en&sa=X&ei=rAgPT5-YI8O5iAeAobDgCQ&redir_esc=y#v=onepage&q=%22the%20knyght%20sawe%20hym%20lye%20soo%20on%20the%20ground%22&f=false page 37]:
+#*: '''Than''' the knyght sawe hym lye soo on the ground, he alyght and was passynge heuy, for he wende he had slayne hym&nbsp;[...].
 # {{context|UK|dialect|affirmation|lang=en}} Used to contradict an assertion.
 #* '''2001''', {{w|Eric Malpass}}, ''At the Height of the Moon'', [http://books.google.com.au/books?id=cClq1igzauQC&pg=PA28&dq=%22She+says+Indian+elephants+are+tidgy+little+things%22&hl=en&sa=X&ei=9gsPT9qlMYeaiQf4kdwu&ved=0CDIQ6AEwAA#v=onepage&q=%22She%20says%20Indian%20elephants%20are%20tidgy%20little%20things%22&f=false page 28],
 #*: ‘She says Indian elephants are tidgy little things.’
