--- a/en/s/souple.856101.wikitext
+++ b/en/s/souple.856101.wikitext
@@ -29,15 +29,14 @@ From {{etyl|la|fr}} ''[[supplex]]''.
 * [[souplesse]]
 
 ===Anagrams===
-* [[loupes#French|loupes]]
-* [[poules#French|poules]]
+* [[loupes#French|loupes]], [[poules#French|poules]]
 
 ----
 
 ==Middle English==
 
 ===Etymology===
-{{etyl|fro|enm}} {{term|sople|lang=fro}} and {{etyl|xno|enm}} {{term|suple|lang=fro}}, from {{etyl|la|enm}} {{term|supplex|lang=la}}
+{{etyl|fro|enm}} {{term|souple|lang=fro}} and {{etyl|xno|enm}} {{term|souple|lang=fro}}, from {{etyl|la|enm}} {{term|supplex|lang=la}}
 
 ===Adjective===
 {{enm-adj}}
@@ -49,6 +48,18 @@ From {{etyl|la|fr}} ''[[supplex]]''.
 
 ====Descendants====
 * English: [[supple]]
+
+----
+
+==Old French==
+
+===Noun===
+{{head|fro|adjective|g=m|g2=f}}
+
+# [[supple]] (which bends readily)
+#* circa 1170, La vie de St. Emonde
+#*: keue '''souple'''<!--from http://www.cnrtl.fr/etymologie/souple-->
+#*:: Supple tail
 
 [[ar:souple]]
 [[de:souple]]
