--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -28,7 +28,7 @@ Used with the definite article {{term|the}}.
 * [[Balkanize]]
 
 ====Translations====
-{{trans-top|geographical region in the southeast of Europe}}
+{{trans-top-also|geographical region in the southeast of Europe|Balkan Peninsula}}
 * {{trreq|sq}}
 * Ancient Greek: {{tø|grc|Χερσόνησος τοῦ Αἵμου|m|tr=Khersonēsos tou Aimou|sc=polytonic}}
 * Armenian: {{t-|hy|Բալկաններ|tr=Balkanner}}
