--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -21,7 +21,8 @@ From {{etyl|xno|en}} {{term|genette|lang=fro}}, {{etyl|frm|en}} {{term|genette|l
 =====Translations=====
 {{trans-top|mammal of the genus ''Genetta''}}
 * Catalan: {{t-|ca|geneta|f}}
-* Chinese: {{t|cmn|獛|tr=[[pú]]|sc=Hani}}
+* Chinese:
+*: Mandarin: {{t|cmn|獛|tr=[[pú]]|sc=Hani}}
 * Dutch: {{t+|nl|genet}}
 * Finnish: {{t-|fi|genetti}}
 * French: {{t+|fr|genette|f}}
