--- a/en/a/all bark and no bite.742638.wikitext
+++ b/en/a/all bark and no bite.742638.wikitext
@@ -11,6 +11,7 @@
 
 ====Translations====
 {{trans-top|full of big talk}}
+* Italian: {{t|it|tutto fumo e niente arrosto}}
 * Spanish: {{t-|es|perro ladrador, poco mordedor}}, {{t-|es|mucho ruido y pocas nueces}}
 {{trans-mid}}
 * Swedish: {{t-|sv|stor i orden men liten på jorden}}
