--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -155,7 +155,7 @@ From {{etyl|ms|id}} {{term|mega|lang=ms}}, from {{etyl|sa|id}} {{term|मेघ|
 ==Malay==
 
 ===Etymology===
-From {{etyl|sa|ms}} {{term|मेघ|tr=megha|gloss=cloud|lang=sa}}.
+From {{etyl|sa|ms}} {{term|मेघ|tr=megha||cloud|lang=sa}}.
 
 ===Alternative forms===
 * {{l|ms|ميݢ|sc=Arab}}
