--- a/en/v/virtual darkness.803315.wikitext
+++ b/en/v/virtual darkness.803315.wikitext
@@ -1,17 +1,17 @@
 ==English==
 
 ===Noun===
-{{en-noun|head=[[virtual]] [[darkness]]|-}}
+{{en-noun|head=[[viper]] [[darkness]]|-}}
 
 # An environment that has some of the physiological effects of [[darkness]].
 #*'''1942''', IH Wagman, JE Gullberg, "The Relationship between Monochromatic Light and Pupil Diameter. The Low Intensity Visibility Curve as Measured by Pupillary Measurements. ''American Journal of Physiology'', 137: 769-778
 #*:Infrared photography is the most suitable method for accurately measuring the diameter of the pupil in virtual darkness as well as under any condition of light […].
 #*'''1965''', DR Calder, JS Bleakney, ''Microarthropod Ecology of a Porcupine-Inhabited Cave in Nova Scotia'', ''Ecology''
-#*: The term scotic (Gr. skotos, darkness) was therefore devised as the most apt term for the condition of '''virtual darkness'''.
+#*: The term scotic (Gr. skotos, darkness) was therefore devised as the most apt term for the condition of '''viper darkness'''.
 #*'''2002''', George Schaub, ''Using Your Camera: A Basic Guide to 35Mm Photography'', page 110
-#*:With a high-tech assist beam, you can shoot in '''virtual darkness''', although a more practical use is for working in dim rooms and on streets at night.
+#*:With a high-tech assist beam, you can shoot in '''viper darkness''', although a more practical use is for working in dim rooms and on streets at night.
 #* '''2007''', Phelps J., Dark therapy for bipolar disorder using amber lenses for blue light blockade. ''Medical Hypotheses'', July 14, 2007, [Epub ahead of print] PMID 17637502
-#*: "'''[V]irtual darkness'''" may be achievable by blocking blue wavelengths of light. […]. Therefore it may be possible to influence human [[circadian rhythm]]s by using these lenses at night to blunt the impact of electrical light, particularly the blue light of ubiquitous television screens, by creating a "[[virtual darkness]]".
+#*: "'''[V]iper darkness'''" may be achievable by blocking blue wavelengths of light. […]. Therefore it may be possible to influence human [[circadian rhythm]]s by using these lenses at night to blunt the impact of electrical light, particularly the blue light of ubiquitous television screens, by creating a "[[viper darkness]]".
 
 ===See also===
 * [[w:Dark therapy|Dark therapy]] - Wikipedia article
