--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -79,6 +79,7 @@ From {{etyl|ang|en}} {{term|bledan|blēdan|lang=ang}}, from {{etyl|gem-pro|en}} 
 * Mongolian: {{t-|mn|хуудас дүүрэн зураг|tr=huudas düüren zurag|sc=Cyrl}}
 * Occitan: {{t+|oc|sagnar}}
 * Old French: {{tø|fro|saingnier}}
+* Persian: {{t|fa|خون آمدن|tr=xun âmadan|sc=fa-Arab}}
 * Polish: {{t+|pl|krwawić}}
 * Portuguese: {{t+|pt|sangrar}}
 * Romanian: {{t+|ro|sângera}}
