--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -37,7 +37,7 @@
 * {{trreq|ko}}
 * {{trreq|pl}}
 * Portuguese: {{t-|pt|informado|m}}, {{t+|pt|atento|m}}
-* Russian: {{t-|ru|в курсе|sc=Cyrl}}
+* Russian: {{t-|ru|в курсе|tr=v kúrse|sc=Cyrl}}
 * {{trreq|sh}}
 * {{trreq|es}}
 * {{trreq|th}}
