--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -118,7 +118,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Latvian: {{t-|lv|trusis}}
 * Lithuanian: {{t+|lt|triušis}}
 * Lojban: {{t+|jbo|ractu}}
-* Low Saxon (Low German): {{t-|nds|Kanink|m|n}}, {{t-|nds|Kaninken|m|n}}
+* Low German: {{t-|nds|Kanink|m|n}}, {{t-|nds|Kaninken|m|n}}
 {{trans-mid}}
 * Lower Sorbian: {{tø|dsb|karnikel}}
 * {{trreq|lb}}
