--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -13,7 +13,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 ===Noun===
 {{en-noun}}
 
-# A [[plant]]; a [[grass]] of the [[Poaceae]] family, characterised by its woody, hollow, round, straight, jointed stem.
+# A [[grass]] of the [[Poaceae]] family, characterised by its woody, hollow, round, straight, jointed stem, all of which are in the {{taxlink|Bambuseae|tribe}} tribe.
 # The wood of the bamboo plant as a material or [[cane]].
 # a [[didgeridoo]]
 # {{context|slang|lang=en}} A [[British]] [[military]] or Honourable East India Company [[employee]], who spent so much time in Indonesia, India, or Malaysia that they never went back home.
